manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: create-one-api
spec:
  selector:
    app: create-one-api
  ports:
    - port: 8080
